config.tests/no_direct_extern_access/other.cpp
@@ -1,0 +1,8 @@
+// Copyright (C) 2022 Intel Corporation.
+// SPDX-License-Identifier: MIT
+
+// This is the test found in https://sourceware.org/bugzilla/show_bug.cgi?id=29377
+
+__attribute__((visibility("protected"))) void foo()
+{
+}
